--- a/chrono-web/package.json
+++ b/chrono-web/package.json
@@ -13,6 +13,7 @@
     "@onflow/fcl": "^1.20.3",
     "@tailwindcss/vite": "^4.1.16",
     "d3": "^7.9.0",
+    "framer-motion": "^12.23.24",
     "react": "^19.1.1",
     "react-dom": "^19.1.1"
   },
